update style and add text in help,about section

--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
                 <img src="img/TFO.jpeg" class="d-block w-100" alt="..." height="700px" width="1000px">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 id="HeadForCarosel">It's Called TFO</h5>
-                    <p id="TextforCarosel">At the yarn stage, TFO renders improved evenness, strength and elongation the material. It also enhances the lustre and abrasion resistance of the yarn. At the fabric stage, however TFO aids in attaining higher stability, better handle, visual characteristics and improved fabric roll.</p>
+                    <p id="TextforCarosel">At the yarn stage, TFO renders improved evenness, strength and elongation the material. It also <br> enhances the lustre and abrasion resistance of the yarn. At the fabric stage, however <br> TFO aids in attaining higher stability, better handle, visual characteristics and improved fabric roll.</p>
                   </div>
               </div>
               <div class="carousel-item">
                 <img src="img/machine.jpeg" class="d-block w-100" alt="..." height="700px" width="1000px">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 id="HeadForCarosel">Looms Machines</h5>
-                    <p id="TextforCarosel">A loom is a device used to weave cloth and tapestry. The basic purpose of any loom is to hold the warp threads under tension to facilitate the interweaving of the weft threads.</p>
+                    <p id="TextforCarosel">A loom is a device used to weave cloth and tapestry. The basic purpose of any loom is to hold the <br> warp threads under tension to facilitate the interweaving of the weft threads.</p>
                   </div>
               </div>
               <div class="carousel-item">
