--- a/cart.html
+++ b/cart.html
@@ -45,7 +45,6 @@
             th{
               width: 25%;
             }
-          
 
             /* Animation */
 
@@ -202,17 +201,17 @@
     <table class="table">
         <thead>
             <tr>
-                <th class="heading">Product</th>
-                <th class="heading">Price</th>
-                <th class="heading" style="text-align: center;">Quantity</th>
-                <th class="heading"> </th>
-                <th class="heading" style="text-align: right;">Total Price</th>
-
+              <th class="heading">Product</th>
+              <th class="heading">Price</th>
+              <th class="heading" style="text-align: center;">Quantity</th>
+              <th class="heading"> </th>
+              <th class="heading" style="text-align: right;">Total Price</th>
+            
             </tr>
         </thead>
         <table class="show-cart table"></table>
     </table>
-    <div>Total price: $<span class="total-cart"></span></div><br><br>
+    <div>Total price: ₹<span class="total-cart"></span></div><br><br>
 
   <div class="footer">
 
@@ -236,7 +235,7 @@
                                                       <span aria-hidden="true">&times;</span>
                                                     </button>
                                                   </div>
-                                                  <div class="modal-body">
+                                                  <div class="modal-body" >
                                                     <form action="javascript:sendMail()" method="post" >
                                                         <fieldset >
                                                               <div class="fieldset_div container" >
