--- a/shopping.html
+++ b/shopping.html
@@ -211,29 +211,27 @@
     </div>
     <ul >
       <li class="cart-item ">
-        <a class="cbp-vm-image text-center card-img-top " href="#"><img src="img/Grey.png" width="200ox" height="auto"></a>
-
-          <h3 class="cbp-vm-title text-center card-title">Grey Product</h3>
+     <a class="cbp-vm-image text-center card-img-top  " href="#"><img class="img-thumbnail" src="img/Grey.png"  ></a>
+          <h3 class="cbp-vm-title text-center card-title" style="padding-top: 2mm;">Grey Product</h3>
           <div class="cbp-vm-price text-center card-text">₹ 200</div>
-          <div class="cbp-vm-details">
+          <div class="cbp-vm-details position">
           Greige is an unfinished woven or knitted fabric <br>that hasn't been bleached or dyed. It can be <br> used for upholstery, window treatments, <br>clothes and more. Greige fabric is also known as <br> grey fabric.
-        </div>
-
-      <a  class="cbp-vm-icon cbp-vm-add btn add-to-cart" href="#"  data-name="Grey" data-price="200"> <svg xmlns="http://www.w3.org/2000/svg" style="color: white;" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+        </div>  <br><br><br>
+      <a  class="cbp-vm-icon cbp-vm-add btn add-to-cart position-relative top-0 start-50 translate-middle" href="#"  data-name="Grey" data-price="200"> <svg xmlns="http://www.w3.org/2000/svg" style="color: white;" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
         <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
     </svg>  &nbsp;&nbsp;Add to Cart</a>
 
 
       </li>
       <li class="cart-item ">
-        <a class="cbp-vm-image text-center  card-img-top" href="#"><img src="img/Tencel.png" width="200px" height="auto"></a>
+       <a class="cbp-vm-image text-center  card-img-top" href="#" style="padding-top: 4mm;padding-bottom: 4mm;"><img  class=" rounded img-thumbnail"  src="img/Tencel.png" height="222px" ></a>
 
-      <h3 class="cbp-vm-title text-center card-title">Yarn</h3>
+      <h3 class="cbp-vm-title text-center card-title" style="padding-top: 7mm;">Yarn</h3>
       <div class="cbp-vm-price text-center  card-text">₹ 300</div>
-      <div class="cbp-vm-details">
+      <div class="cbp-vm-details position">
           Yarn is a long continuous length of interlocked <br>fibres, suitable for use in the production of <br>textiles, sewing, crocheting, knitting, weaving, <br>embroidery, or ropemaking. Thread is a type of <br>yarn intended for sewing by hand or machine.
-      </div>
-      <a class="cbp-vm-icon cbp-vm-add btn add-to-cart" href="#" data-name="Yarn" data-price="300"> <svg xmlns="http://www.w3.org/2000/svg" style="color: white;" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+      </div><br><br><br>
+      <a class="cbp-vm-icon cbp-vm-add btn add-to-cart position-relative top-0 start-50 translate-middle" href="#" data-name="Yarn" data-price="300"> <svg xmlns="http://www.w3.org/2000/svg" style="color: white;" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
        <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
       </svg>  &nbsp;&nbsp;Add to Cart</a>
 
@@ -242,8 +240,9 @@
 
 
   </div>
-  <p>To view cart click on Cart icon on Navbar</p>
-</button><button class="clear-cart btn btn-danger">Clear Cart</button>
+  <div class="positon" >
+<button class="clear-cart btn btn-danger position-relative top-0 start-50 translate-middle">Clear Cart</button><p class="form-text text-center" style="color: #94908d;">To view cart click on Cart icon on Navbar</p>
+</div>
 </div><br><br>
   <!-- footer ------------------------------------------------------------------------------------------------>
                 <div class="footer">
