Add validation in contact,complain,feedback,cart details form

--- a/cart.html
+++ b/cart.html
@@ -32,6 +32,9 @@
             .heading{
                 color: var(--title-color);
             }
+            .required-star{
+                color: red;
+              }
 
             body{
                 background-color: var(--primary-color);
@@ -236,15 +239,15 @@
                                                     </button>
                                                   </div>
                                                   <div class="modal-body" >
-                                                    <form action="javascript:sendMail()" method="post" >
+                                                    <form class=" form-floating needs-validation " action="javascript:sendMail()" method="post" >
                                                         <fieldset >
                                                               <div class="fieldset_div container" >
                                                               <div class="mb-3"><br>
-                                                                  <label for="textInput" class="form-label">Name *</label>
-                                                                    <input type="text" id="form-name" class="form-control" placeholder="Enter full name">
+                                                                  <label for="textInput" class="form-label">Name <span class="required-star">*</span></label>
+                                                                    <input type="text" id="form-name" class="form-control" placeholder="Enter full name" required>
                                                               </div>
 
-                                                              <label for="exampleFormControlInput1" class="form-label">Phone *</label>
+                                                              <label for="exampleFormControlInput1" class="form-label">Phone <span class="required-star">*</span></label>
                                                               <div class="input-group mb-3">
                                                                   <select  class="form-select-sm" aria-label=".form-select-sm example" style="width: 25%;" required>
                                                                       <option value="1">+91</option>
@@ -253,24 +256,36 @@
                                                                       <option value="4">***</option>
                                                                       <option value="5">***</option>
                                                                   </select>
-                                                                  <input id="form-phone"type="textInput" class="form-control" aria-label="Text input with dropdown button" placeholder="" >
+                                                                  <input id="form-phone"type="tel" class="form-control" aria-label="Text input with dropdown button" pattern="[0-9]{10}" placeholder="number size=10"required >
                                                               </div>
                                                               <div class="mb-3">
-                                                                <label for="exampleFormControlInput1" class="form-label">Email address *</label>
-                                                                <input id="form-email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                                                                <label for="exampleFormControlInput1" class="form-label">Email address <span class="required-star">*</span></label>
+                                                                <input id="form-email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" required>
                                                               </div>
 
                                                               <div class="mb-3">
-                                                                <label for="exampleFormControlTextarea1" class="form-label">Address</label>
-                                                                <textarea class="form-control" id="form-text" rows="3"></textarea>
+                                                                <label for="exampleFormControlTextarea1" class="form-label">Address<span class="required-star">*</span></label>
+                                                                <textarea class="form-control" id="form-text"  placeholder="Please eneter complete address including city name,state name and zip code" rows="3" required></textarea>
+                                                                <div class="invalid-feedback" for="form-text">
+                                                                  Please enter a address in the textarea . <br> It is compulsary
+                                                                </div>
                                                               </div>
+                                                              <div class="form-check">
+                                                                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                                                                <label class="form-check-label" for="invalidCheck">
+                                                                  Agree to terms and conditions
+                                                                </label>
+                                                                <div class="invalid-feedback">
+                                                                  You must agree before submitting.
+                                                                </div>
+                                                            </div>
                                                             </div>
                                                         </fieldset>
                                                       </form>
                                                 </div>
                                                   <div class="modal-footer">
-                                                    <!-- <button type="button submit" class="btn btn-primary ">Submit</button> -->
-                                                    <input type="button" class="btn btn-success" value="Submit" onclick="sendMail()" />
+                                                    <button type="submit" id="submit-btn" class="btn btn-success"> Submit</button>
+                                                    <!-- <input type="button" class="btn btn-success" value="Submit" onclick="sendMail()" /> -->
                                                   </div>
                                                 </div>
                                               </div>
@@ -379,7 +394,7 @@ integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQO
       Email.send({
 
       SecureToken: "127e16a9-a597-41f7-9323-7251ac5e1842",
-      To : '19ce005@charusat.edu.in',
+      To : '19ce023@charusat.edu.in',
       From : "omsagar6654@gmail.com",
       Subject : "Product Order from " + Mname,
       Body : Mbody
@@ -393,5 +408,6 @@ integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQO
       }
     );
   }
+
   </script>
 </html>
