sme minor updates

--- a/grey_products.html
+++ b/grey_products.html
@@ -146,7 +146,7 @@
                 <h1 class="title text-center">Yarn</h1>
                 <div class="col" id="info_yarn">
                     <p  class="description justify-content-center container">
-              Yarn is a long continuous length of interlocked fibres, suitable for use in the production of textiles, sewing, crocheting, knitting, weaving, embroidery, or ropemaking.
+              Yarn is a long continuous length of interlocked fibres, suitable for use in the production of textiles, sewing, crocheting, knitting, weaving,
 
                         <span id="points">...</span>
                         <!-- Define the text that would be
@@ -155,7 +155,7 @@
 
                             when clicked on the button -->
 
-                        <span id="moreText"> Thread is a type of yarn intended for sewing by hand or machine. Embroidery threads are yarns specifically designed for needlework. The most common plant fiber is cotton, which is typically spun into fine yarn for mechanical weaving or knitting into cloth.Cotton and polyester are the most commonly spun fibers in the world. Cotton is grown throughout the world. After harvesting it is ginned and prepared for yarn spinning. Polyester is extruded from polymers derived from natural gas and oil. Synthetic fibers are generally extruded in continuous strands of gel-state materials.These strands are drawn (stretched), annealed (hardened), and cured to obtain properties desirable for later processing.
+                        <span id="moreText">embroidery, or ropemaking. Thread is a type of yarn intended for sewing by hand or machine. Embroidery threads are yarns specifically designed for needlework. The most common plant fiber is cotton, which is typically spun into fine yarn for mechanical weaving or knitting into cloth.Cotton and polyester are the most commonly spun fibers in the world. Cotton is grown throughout the world. After harvesting it is ginned and prepared for yarn spinning. Polyester is extruded from polymers derived from natural gas and oil. Synthetic fibers are generally extruded in continuous strands of gel-state materials.These strands are drawn (stretched), annealed (hardened), and cured to obtain properties desirable for later processing.
                         </span>
                     </p>
                     <!-- Trigger toggleText() when the
