--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
           </div>
 
           <div class="md-form">
-            <label for="form-text"><b>Enter Your Text Here</b></label>
-            <textarea id="form-text" class="form-control md-textarea" rows="3"></textarea>
+            <label for="form-text"><b>ontact Reason</b></label>
+            <textarea id="form-text" class="form-control md-textarea" rows="3" placeholder="why you want to contact us?"></textarea>
 
           </div>
 
