--- a/Complain.html
+++ b/Complain.html
@@ -184,19 +184,16 @@
                     <br>
 
                   <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label"  data-bs-toggle="tooltip" data-bs-placement="bottom" title="If you are submit your complain in attached file then just write 'file attached' in Detailed iformation .">Detailed Information</label>
+                    <label for="exampleFormControlTextarea1" class="form-label"  data-bs-toggle="tooltip" data-bs-placement="bottom" title="If you are submit your complain in attached file then just write 'file attached' in Detailed information .">Detailed Information</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="write your complain here in detail" required></textarea>
                     
                   </div>
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                    <label class="form-check-label" for="invalidCheck">
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                    <label class="form-check-label" for="invalidCheck2">
                       Agree to terms and conditions
                     </label>
-                    <div class="invalid-feedback">
-                      You must agree before submitting.
-                    </div>
-                </div>
+                  </div>
                                         <!-- Button trigger modal -->
                     <button id="modal-submit" type="submit" class="btn btn-primary" value="Submit">
                       Submit
