add star to city & state as they are required fields

--- a/cart.html
+++ b/cart.html
@@ -262,13 +262,13 @@
                                                                 <input id="form-email" type="email" class="form-control " id="exampleFormControlInput1" placeholder="name@example.com" required>
                                                               </div>
                                                               <div>
-                                                                <label for="validationServer03" class="form-label">State</label>
+                                                                <label for="validationServer03" class="form-label">State<span class="required-star">*</span></label>
                                                             <input type="text" class="form-control" id="validationServer03" aria-describedby="validationServer03Feedback" required>
                                                             <div id="validationServer03Feedback" class="invalid-feedback">
                                                               Please provide a valid state.
                                                             </div>    
                                                             <div>
-                                                              <label for="validationServer04" class="form-label">City</label>
+                                                              <label for="validationServer04" class="form-label">City<span class="required-star">*</span></label>
                                                             <input type="text" class="form-control" id="validationServer04" aria-describedby="validationServer04Feedback" required>
                                                             <div id="validationServer04Feedback" class="invalid-feedback">
                                                               Please provide a valid city.
